--- a/ClientRuntimes/Java/src/main/java/com/microsoft/rest/package.html
+++ b/ClientRuntimes/Java/src/main/java/com/microsoft/rest/package.html
@@ -1,5 +1,5 @@
 <html>
 <head />
-<body>This package contains the core classes across difference services.
+<body>This package contains the runtime for compiling AutoRest generated libraries.
 </body>
 </html>
